--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -46,7 +46,8 @@ h2 {
   font-weight: bold;
 }
 
-.form-control input {
+.form-control input,
+.form-control select {
   border: 2px solid #f0f0f0;
   border-radius: 4px;
   display: block;
