--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -47,7 +47,9 @@ h2 {
 }
 
 .form-control input,
-.form-control select {
+.form-control select,
+.form-control textarea 
+ {
   border: 2px solid #f0f0f0;
   border-radius: 4px;
   display: block;
