--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,34 @@ small {
   font-weight: 700;
 }
 
+#inv-display {
+  display: flex;
+  flex-direction: row;
+  flex-wrap:  wrap ;
+  justify-content: center;
+  align-items: center;
+}
+
+#inv-display li{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style-type: none;
+  width: 25%;
+  height: 300px;
+  border: 2px solid #000;
+  box-shadow: 0 0 15px rgba(0,0,0);
+  border-radius: 5px;
+  margin: 20px;
+}
+
+#inv-display img{
+  width: 100%;
+  height: 50%;
+}
+
+
+
 
 @media screen and (min-width: 680px) {
   body {
