--- a/css/style.css
+++ b/css/style.css
@@ -188,10 +188,10 @@ small {
   list-style-type: none;
   width: 25%;
   height: 300px;
-  border: 2px solid #000;
   box-shadow: 0 0 15px rgba(0,0,0);
   border-radius: 5px;
   margin: 20px;
+  font-size: 0.7rem;
 }
 
 #inv-display img{
