--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,15 @@ small {
   height: 50%;
 }
 
+#inv-display span{
+  font-weight: bold;
+  font-size: 1rem;
+}
 
+h2, h1 {
+  text-align: center;
+  margin: 0 0 20px;
+}
 
 
 @media screen and (min-width: 680px) {
