Added detail page styling

--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,10 @@ small {
   font-size: 0.7rem;
 }
 
+#inv-display a{
+  text-decoration: none;
+}
+
 #inv-display img{
   width: 100%;
   height: 50%;
@@ -208,6 +212,34 @@ h2, h1 {
   text-align: center;
   margin: 0 0 20px;
 }
+
+.container-detail {
+  width: 70%;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.container-detail img{
+  width: 70%;
+  height: 300px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0);
+  margin: auto;
+}
+
+.container-detail h4{
+  margin: 10px;
+  color: black;
+}
+
+.container-detail h1{
+  margin: 10px;
+  color: blue;
+}
+
+
 
 
 @media screen and (min-width: 680px) {
