--- a/css/style.css
+++ b/css/style.css
@@ -219,24 +219,28 @@ h2, h1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  background-color: #555;
+  padding: 50px 20px;
+  border-radius: 5px;
 }
 
 .container-detail img{
   width: 70%;
   height: 300px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   box-shadow: 0 0 10px rgba(0,0,0);
   margin: auto;
 }
 
 .container-detail h4{
   margin: 10px;
-  color: black;
+  color: white;
+  font-size: 0.9rem;
 }
 
 .container-detail h1{
   margin: 10px;
-  color: blue;
+  color: yellow;
 }
 
 
