--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ h2, h1 {
   color: yellow;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (min-width: 680px) {
   body {
     max-width: 960px;
     margin: auto;
@@ -280,25 +280,19 @@ h2, h1 {
     flex-direction: row-reverse;
     width: 100%;
   }
+}
+
+@media(max-width: 680px) {
+  #inv-display li{
+    width: 100%;
+  }
 
   .container-detail {
-    width: 100vw;
+    width: 100%;
   }
-
+  
   .container-detail img{
     width: 100%;
-  }
-
-  #inv-display li{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style-type: none;
-    width: 100%;
-    height: 300px;
-    box-shadow: 0 0 15px rgba(0,0,0);
-    border-radius: 5px;
-    margin: 20px;
-    font-size: 0.7rem;
+    height: 200px;
   }
 }
